--- a/Load_data_sets.ipynb
+++ b/Load_data_sets.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "523369f3",
+   "id": "2b78a22f",
    "metadata": {},
    "outputs": [
     {
@@ -41,15 +41,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6abd73ed",
+   "execution_count": 13,
+   "id": "6239f0d6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "748\r"
+      "199\r"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 1 is out of bounds for axis 0 with size 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [13]\u001b[0m, in \u001b[0;36m<cell line: 173>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    220\u001b[0m ztot_vec_252    \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m [ztot]\n\u001b[1;32m    221\u001b[0m a_T_vec_252     \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m [a_T]\n\u001b[0;32m--> 222\u001b[0m DiffH_vec_252   \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m [\u001b[43mDiffHT\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m]\n\u001b[1;32m    223\u001b[0m DiffG_vec_252   \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m [DiffGT[\u001b[38;5;241m1\u001b[39m]]\n\u001b[1;32m    224\u001b[0m DiffHe_vec_252  \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m [DiffHT[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]]\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 1 is out of bounds for axis 0 with size 1"
      ]
     }
    ],
@@ -112,6 +123,7 @@
     "for i in np.arange(k,len(results_list_203)):\n",
     "\n",
     "    # Open a specific simulation's files\n",
+    "    # Side note: these 4 lines of code are how to open the model outputs\n",
     "    f = gzip.open(results_list_203[i],'rb')\n",
     "    t,y,pT,T_surfT,T_avT,rhoT,pCH4T,pH2T,pCO2T,pN2T,DiffHT,DiffGT = pickle.load(f)\n",
     "    p,pH2,pCO2,pCH4,a_eps,a_to,r_surf,T_av,ztot,a_T = pickle.load(open(params_list_203[i],'rb'))\n",
@@ -229,6 +241,7 @@
     "for i in np.arange(k,len(results_list_252)):\n",
     "\n",
     "    # Open a specific simulation's files\n",
+    "    # Side note: these 4 lines of code are how to open the model outputs\n",
     "    f = gzip.open(results_list_252[i],'rb')\n",
     "    t,y,pT,T_surfT,T_avT,rhoT,pCH4T,pH2T,pCO2T,pN2T,DiffHT,DiffGT = pickle.load(f)\n",
     "    p,pH2,pCO2,pCH4,a_eps,a_to,r_surf,T_av,ztot,a_T = pickle.load(open(params_list_252[i],'rb'))\n",
@@ -346,6 +359,7 @@
     "for i in np.arange(k,len(results_list_273)):\n",
     "\n",
     "    # Open a specific simulation's files\n",
+    "    # Side note: these 4 lines of code are how to open the model outputs\n",
     "    f = gzip.open(results_list_273[i],'rb')\n",
     "    t,y,pT,T_surfT,T_avT,rhoT,pCH4T,pH2T,pCO2T,pN2T,DiffHT,DiffGT = pickle.load(f)\n",
     "    p,pH2,pCO2,pCH4,a_eps,a_to,r_surf,T_av,ztot,a_T = pickle.load(open(params_list_273[i],'rb'))\n",
@@ -408,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec249db9",
+   "id": "7f74d467",
    "metadata": {},
    "outputs": [],
    "source": []
